adding state to app.js; changed colors of background to look nicer; gave the fruits there own images so they stopped becoming broken links after 24 hours

--- a/application/src/components/Header/Header.css
+++ b/application/src/components/Header/Header.css
@@ -3,7 +3,7 @@ header {
   top: 0px;
   width: 100%;
   height: 100px;
-  background-color: green;
+  background-color: rgba(122, 4, 33, 0.897);
   z-index: 5;
 }
 
