--- a/application/src/App.css
+++ b/application/src/App.css
@@ -1,4 +1,7 @@
 #containerMain {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: orange;
 }
